--- a/assets/sass/templates/_projects.scss
+++ b/assets/sass/templates/_projects.scss
@@ -7,8 +7,7 @@
     a {
         text-decoration: none;
         color: _.$color_primary;
-        display: block;
-        text-overflow: ellipsis;
+        overflow-wrap: break-word;
     }
     p {
         margin-top: 10px;
